--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "material-design-lite": "~1.0.6",
-    "angular": "~1.4.8"
+    "angular": "~1.4.8",
+    "angular-ui-router": "~0.2.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
