--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "gulp": "^3.9.0",
     "gulp-autoprefixer": "2.3.1",
     "gulp-cache": "^0.2.10",
+    "gulp-concat": "^2.6.0",
     "gulp-connect": "^2.2.0",
     "gulp-filter": "^2.0.2",
     "gulp-imagemin": "^2.3.0",
