--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "gulp-util": "^3.0.6",
     "gulp-watch": "^4.2.4",
     "jshint-stylish": "^1.0.0",
+    "karma-jasmine": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.2.3",
     "lazypipe": "^0.2.4",
     "open": "0.0.5",
     "rimraf": "^2.4.0",
